2005-08030  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely, global.itely,
	tutorial.itely: misc small changes.

2005-08-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Include MY_PATCH_LEVEL in config.make's
	VERSION.

2005-08-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-column.cc (new_directions): put Tie down on center
	staff line. 

	* lily/script-interface.cc (before_line_breaking): use Grob::programming_error

	* scm/ps-to-png.scm (make-ps-images): use pngalpha device.

	* scripts/lilypond-book.py (get_latex_textwidth): oops. Take [0]
	of splitext.

2005-08-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): VERSION release 2.7.8

2005-08-29  Werner Lemberg  <wl@gnu.org>

	* mf/GNUmakefile: Add `-f' flag to `rm' command while removing
	the `*.scale.pfa' files to avoid warnings.

2005-08-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tempo-performer.cc (process_music): idem.

	* lily/midi-def.cc (get_tempo): Rational to int conversion bug.

2005-08-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/advanced-notation.itely (Text markup): not a
	fragment.

	* lily/midi-item.cc (to_string): use to_int() iso. int cast.

	* lily/staff-performer.cc (initialize): add tempo/name to
	audio_staff_


2005-08-26  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced.itely: add text-only example.

	* Documentation/user/invoking.itely: add index entries for
	convert-ly.

	* Documentation/user/ tutorial.itely, basic-notation.itely:
	small fixes suggested by Steve D.  Thanks!

2005-08-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/markup-bidi-pango.ly: new file.

	* lily/pango-font.cc (pango_item_string_stencil): make Mingw code
	standard. Remove #ifdef. Remove memleak.
	(text_stencil): use text_dir to decide how to composite items.
	(text_stencil): determine uniform text direction for the entire
	string.

	* scripts/lilypond-book.py (output_name): remove